@@ -37,6 +37,7 @@
 #endif
 
 #include <exo/exo-md5.h>
+#include <exo/exo-private.h>
 #include <exo/exo-string.h>
 #include <exo/exo-alias.h>
 
@@ -333,7 +334,7 @@ exo_str_get_md5_digest (const gchar *contents)
 
   g_return_val_if_fail (contents != NULL, NULL);
 
-  digest = g_new (ExoMd5Digest, 1);
+  digest = _exo_slice_new (ExoMd5Digest);
   get_md5 (contents, digest->digest);
 
   return digest;
@@ -386,7 +387,7 @@ exo_md5_str_to_digest (const gchar *str_digest)
   g_return_val_if_fail (str_digest != NULL, NULL);
   g_return_val_if_fail (strlen (str_digest) == 32, NULL);
 
-  digest = g_new (ExoMd5Digest, 1);
+  digest = _exo_slice_new (ExoMd5Digest);
   for (n = 0; n < 16; ++n)
     {
       digest->digest[n] =
@@ -463,7 +464,7 @@ exo_md5_digest_dup (const ExoMd5Digest *digest)
 void
 exo_md5_digest_free (ExoMd5Digest *digest)
 {
-  g_free (digest);
+  _exo_slice_free (ExoMd5Digest, digest);
 }
 
 
