@@ -20,8 +20,8 @@
  * Boston, MA 02111-1307, USA.
  */
 
-#if !defined (EXO_INSIDE_EXO_H) && !defined (EXO_COMPILATION)
-#error "Only <exo/exo.h> can be included directly, this file may disappear or change contents."
+#if !defined (EXO_COMPILATION)
+#error "Only <exo/exo.h> can be included directly, this file is not part of the public API."
 #endif
 
 #ifndef __EXO_PRIVATE_H__
@@ -32,6 +32,23 @@
 #include <glib/gi18n-lib.h>
 
 G_BEGIN_DECLS;
+
+/* support macros for the slice allocator */
+#if GLIB_CHECK_VERSION(2,10,0)
+#define _exo_slice_alloc(block_size)             (g_slice_alloc ((block_size)))
+#define _exo_slice_alloc0(block_size)            (g_slice_alloc0 ((block_size)))
+#define _exo_slice_free1(block_size, mem_block)  G_STMT_START{ g_slice_free1 ((block_size), (mem_block)); }G_STMT_END
+#define _exo_slice_new(type)                     (g_slice_new (type))
+#define _exo_slice_new0(type)                    (g_slice_new0 (type))
+#define _exo_slice_free(type, ptr)               G_STMT_START{ g_slice_free (type, (ptr)); }G_STMT_END
+#else
+#define _exo_slice_alloc(block_size)             (g_malloc ((block_size)))
+#define _exo_slice_alloc0(block_size)            (g_malloc0 ((block_size)))
+#define _exo_slice_free1(block_size, mem_block)  G_STMT_START{ g_free ((mem_block)); }G_STMT_END
+#define _exo_slice_new(type)                     (g_new (type, 1))
+#define _exo_slice_new0(type)                    (g_new0 (type, 1))
+#define _exo_slice_free(type, ptr)               G_STMT_START{ g_free ((ptr)); }G_STMT_END
+#endif
 
 void  _exo_i18n_init                    (void) G_GNUC_INTERNAL;
 
